--- a/zenorcode.html
+++ b/zenorcode.html
@@ -16,10 +16,11 @@
 
   <script>
     new QRCode(document.getElementById("qrcode"), {
-      text: window.location.origin + "/index.html",
+      text: window.location.origin + "https://zenor-health.vercel.app/",
       width: 200,
       height: 200
     });
   </script>
 </body>
+
 </html>
