--- a/zenorcode.html
+++ b/zenorcode.html
@@ -16,7 +16,7 @@
 
   <script>
     new QRCode(document.getElementById("qrcode"), {
-      text: window.location.origin + "https://zenor-health.vercel.app/",
+      text:"https://zenor-health.vercel.app/",
       width: 200,
       height: 200
     });
@@ -24,3 +24,4 @@
 </body>
 
 </html>
+
